--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,15 @@
 <html lang="en">
 <head>
+    <link rel="shortcut icon" th:href="@{/favicon.ico}" type="image/x-icon">
+    <link rel="icon" th:href="@{/favicon.ico}" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/style-login-registration.css}">
     <meta charset="UTF-8">
-    <title>Custom messanger</title>
+    <title>WebAppChat</title>
+<!--    <script src="https://code.jquery.com/jquery-latest.min.js"></script>-->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
@@ -11,15 +19,51 @@
     <!--    end libs for stomp and sockjs-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"
           type="text/css">
-    <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
-<div class="container clearfix">
+<section id="login" class="vh-100">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+                <div class="card" style="border-radius: 1rem;">
+                    <div class="row g-0">
+                        <div class="col-md-6 col-lg-5 d-none d-md-block">
+                            <img th:src="@{/images/login-main.jpg}"
+                                 alt="login form" class="img-fluid"
+                                 style="border-radius: 1rem 0 0 1rem; height: 100%"/>
+                        </div>
+                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                            <div class="card-body p-4 p-lg-5 text-black">
+                                <div class="d-flex align-items-center mb-3 pb-1">
+                                    <img style="max-width: 30%; max-height: 30%" class="h1 fw-bold mb-0"
+                                         th:src="@{/images/login-logo.jpg}">
+                                </div>
+                                <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Enter your name</h5>
+                                <div class="form-outline mb-4">
+                                    <input type="text" id="userName" name="username"
+                                           class="form-control form-control-lg"/>
+                                    <label class="form-label" for="username">Your name</label>
+                                </div>
+                                <div class="pt-1 mb-4">
+                                    <button class="btn btn-dark btn-lg btn-block gradient-custom-4"
+                                            onclick="registration()">Enter to chat
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div id="main" class="container2 clearfix" hidden>
+
     <div class="people-list" id="people-list">
         <div class="search">
-            <input id="userName" placeholder="search" type="text"/>
-            <button onclick="registration()">Enter the chat</button>
-            <button onclick="fetchAll()">Refresh</button>
+            <p class="h5 text-light">Inbox</p>
         </div>
         <ul class="list" id="usersList">
 
@@ -29,29 +73,27 @@
 
     <div class="chat">
         <div class="chat-header clearfix">
-            <img alt="avatar" height="55px"
-                 src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png"
-                 width="55px"/>
-
-            <div class="chat-about">
-                <div class="chat-with" id="selectedUserId"></div>
-                <div class="chat-num-messages"></div>
+            <div>
+                <p class="h5">Sent</p>
             </div>
-            <i class="fa fa-star"></i>
         </div> <!-- end chat-header -->
 
         <div class="chat-history">
-            <ul>
+            <ul class="chat-message-item">
 
             </ul>
 
         </div> <!-- end chat-history -->
 
         <div class="chat-message clearfix">
+            <input class="form-control basicAutoComplete" placeholder="To" type="text"
+                   data-url="fetchAllUsers"
+                   autocomplete="off">
+            <input class="form-control" type="text" placeholder="Subject" name="subject" id="subject">
             <textarea id="message-to-send" name="message-to-send" placeholder="Type your message" rows="3"></textarea>
 
-            <i class="fa fa-file-o"></i> &nbsp;&nbsp;&nbsp;
-            <i class="fa fa-file-image-o"></i>
+<!--            <i class="fa fa-file-o"></i>-->
+<!--            <i class="fa fa-file-image-o"></i>-->
 
             <button id="sendBtn">Send</button>
 
@@ -62,30 +104,48 @@
 </div> <!-- end container -->
 
 <script id="message-template" type="text/x-handlebars-template">
-    <li class="clearfix">
-        <div class="message-data align-right">
-            <span class="message-data-time">{{time}}, Today</span> &nbsp; &nbsp;
-            <span class="message-data-name">You</span> <i class="fa fa-circle me"></i>
-        </div>
-        <div class="message other-message float-right">
-            {{messageOutput}}
+    <li class="clearfix" onclick="switchElemVisibility(this)">
+        <div class="about" >
+            <div><b>To: </b> {{toUserName}}</div>
+            <div><b>Date: </b>{{time}}</div>
+            <div><b>Subject: </b> {{subject}}</div>
+            <div style="display: none">{{messageOutput}}</div>
         </div>
     </li>
 </script>
 
 <script id="message-response-template" type="text/x-handlebars-template">
-    <li>
-        <div class="message-data">
-            <span class="message-data-name"><i class="fa fa-circle online"></i> {{userName}}</span>
-            <span class="message-data-time">{{time}}, Today</span>
-        </div>
-        <div class="message my-message">
-            {{response}}
-        </div>
-    </li>
+    <li class="clearfix" onclick="switchElemVisibility(this)">
+                    <div class="about" >
+                         <div><b>From: </b> {{userName}}</div>
+                         <div><b>Date: </b>{{time}}</div>
+                        <div><b>Subject: </b> {{subject}}</div>
+                         <div style="display: none">{{response}}</div>
+                       </div>
+                </li>
+
 </script>
 
+
+
+<script src="//code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://raw.githack.com/xcash/bootstrap-autocomplete/master/dist/latest/bootstrap-autocomplete.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/chat.js"></script>
+<script>
+    $(function () {
+        // Basic
+        $('.basicAutoComplete').autoComplete({
+            resolverSettings: {
+                url: '/fetchAllUsers'
+            },
+            minLength: 1
+        });
+
+
+    });
+</script>
 </body>
 </html>
